--- a/package.json
+++ b/package.json
@@ -1,65 +1,60 @@
 {
-  "name": "ng-universal-demo",
-  "version": "4.0.0",
-  "main": "dist/server.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/angular/universal-starter.git"
-  },
-  "contributors": [
-    "AngularClass <hello@angularclass.com>",
-    "PatrickJS <patrick@angularclass.com>",
-    "Jeff Whelpley <jeff@gethuman.com>",
-    "Jeff Cross <crossj@google.com>",
-    "Mark Pieszak <mpieszak84@gmail.com>",
-    "Jason Jean <jasonjean1993@gmail.com>"
-  ],
+  "name": "clarity-seed",
+  "version": "0.10.0",
+  "description": "Angular-CLI starter for a Clarity project",
+  "angular-cli": {},
   "scripts": {
-    "start": "npm run build && npm run server",
-    "build": "webpack",
-    "build:aot": "webpack --env.aot --env.client & webpack --env.aot --env.server",
-    "build:prod": "webpack --env.aot --env.client -p & webpack --env.aot --env.server",
-    "prebuild": "npm run clean",
-    "prebuild:aot": "npm run clean",
-    "prebuild:prod": "npm run clean",
-    "clean": "rimraf dist",
-    "server": "nodemon dist/server.js",
-    "watch": "webpack --watch"
+    "start": "ng serve",
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test --single-run",
+    "pree2e": "webdriver-manager update",
+    "e2e": "protractor protractor.config.js"
   },
-  "engines": {
-    "node": ">=6.0.0"
-  },
-  "license": "MIT",
+  "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/platform-server": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "@nguniversal/express-engine": "^1.0.0-beta.2",
-    "express": "^4.15.2",
-    "rxjs": "^5.4.0",
-    "serialize-javascript": "^1.3.0",
-    "xhr2": "^0.1.4",
-    "zone.js": "^0.8.10"
+    "@angular/animations": "^4.3.0",
+    "@angular/common": "^4.3.0",
+    "@angular/compiler": "^4.3.0",
+    "@angular/core": "^4.3.0",
+    "@angular/forms": "^4.3.0",
+    "@angular/http": "^4.3.0",
+    "@angular/platform-browser": "^4.3.0",
+    "@angular/platform-browser-dynamic": "^4.3.0",
+    "@angular/router": "^4.3.0",
+    "@webcomponents/custom-elements": "^1.0.0",
+    "clarity-angular": "^0.10.8",
+    "clarity-icons": "^0.10.8",
+    "clarity-ui": "^0.10.8",
+    "core-js": "^2.4.1",
+    "mutationobserver-shim": "^0.3.2",
+    "rxjs": "^5.4.3",
+    "ts-helpers": "^1.1.1",
+    "web-animations-js": "^2.3.1",
+    "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.0.0",
-    "@ngtools/webpack": "^1.3.1",
-    "@types/express": "^4.0.35",
-    "@types/node": "^7.0.18",
-    "html-webpack-plugin": "^2.28.0",
-    "nodemon": "^1.11.0",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.6.1",
-    "script-ext-html-webpack-plugin": "^1.7.1",
-    "typescript": "^2.3.2",
-    "webpack": "3.3.0",
-    "webpack-merge": "^4.1.0",
-    "webpack-node-externals": "^1.6.0"
+    "@angular/cli": "^1.2.1",
+    "@angular/compiler-cli": "^4.3.0",
+    "@types/core-js": "~0.9.42",
+    "@types/jasmine": "^2.5.53",
+    "@types/jasminewd2": "^2.0.2",
+    "@types/node": "^8.0.24",
+    "bootstrap": "4.0.0-alpha.5",
+    "codelyzer": "~3.1.2",
+    "enhanced-resolve": "~3.4.1",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-mocha-reporter": "~2.2.1",
+    "karma-remap-istanbul": "~0.6.0",
+    "protractor": "~5.1.2",
+    "ts-node": "^3.0.4",
+    "tslint": "^5.3.2",
+    "typescript": "~2.3.3",
+    "typings": "^1.4.0",
+    "webdriver-manager": "^12.0.6"
   }
 }
